Fix progress bars not aligned with text

--- a/css/_polls.scss
+++ b/css/_polls.scss
@@ -115,7 +115,7 @@ ol.poll-result-list {
     border: #616161 solid 1px;
     border-radius: 3px;
     padding: 2px 6px;
-    margin: 4px 8px 12px;
+    margin: 4px 0px 12px;
     background-color: #616161;
 }
 
@@ -143,8 +143,6 @@ ol.poll-result-list {
     background-color: #616161;
     min-width: 150px;
     margin-top: 3px;
-    margin-left: 8px;
-    margin-right: 8px;
 }
 
 .poll-bar {
